[package]
name = "musevideo-client"
version = "0.1.2"
edition = "2021"
description = "Typed Rust primitives for describing Muse Video prompts, generation parameters, and pipeline metadata."
license = "MIT"
readme = "README.md"
homepage = "https://musevideo.art"
repository = "https://github.com/JulianReed888/musevideo-client"
documentation = "https://docs.rs/musevideo-client"
keywords = ["ai", "video", "workflow", "generator", "client"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
